nome de um arquivo css mudado e criacao de uma variavel no css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/toggle.css" />
-    <link rel="stylesheet" href="./assets/css/details.css" />
+    <link rel="stylesheet" href="./assets/css/form.css" />
     <title>getkcal</title>
   </head>
   <body>
